# interlock-new-challenges

./: .gitignore  CMakeLists.txt  main.c  readme.md
3d-obj/: model.mtl
include/: 3d.h  block.c  block.h  blocks.c  blocks.h  cube.c  cube.h  custom_types.c  custom_types.h  debug.c  debug.h  obj_write.c  obj_write.h  part.h  perms.c  perms.h  piece.c  piece.h  pos.c  pos.h  world.c  world.h
